prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -128,9 +128,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 
 <h3 id="android-sony">Sony</h3>
   <p>back to <a href="#">top</a> </p>
-  <p>This is a setup guide that will assist you in setting up your
-Hosted Exchange Mailbox on Sony Experia mobile and
-tablet devices using ActiveSync.</p>
+  <p>This is a setup guide that will assist you in setting up your Hosted Exchange Mailbox on Sony Experia mobile and tablet devices using ActiveSync.</p>
 
 <ol>
   <li>Gather resolution information and enter it into the ticket.</li>
@@ -161,92 +159,394 @@ tablet devices using ActiveSync.</p>
 
 <h3 id="android-nexus">Nexus</h3>
   <p>back to <a href="#">top</a> </p>
+  <p>This is a setup guide that will assist you in setting up your Hosted Exchange Mailbox on Google Nexus mobile and tablet devices using ActiveSync.</p>
 
-  <ol>
+<ol>
   <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Locate the "Settings" icon within your Apps Drawer.</li>
+  <li>Within Settings, scroll down to "Personal" and select "Accounts".</li>
+  <li>Select "Add Account".</li>
+  <li>Select "Exchange".</li>
+  <li>Enter the following information: "Email Address": ruthless@securityaware.case.edu</li>
+  <li>Tap "Next".</li>
+  <li>Enter the following information: "Password": Your Mailbox Password</li>
+  <li>Tap "Next".</li>
+  <li>Enter the following information on the next screen:</li>
+    <ul>
+      <li>"User name": ruthless@securityaware.case.edu</li>
+      <li>"Server": mex08.emailsrvr.com</li>
+      <li>"Port": 443</li>
+      <li>"Security Type": SSL/TLS</li>
+    </ul>
+  <li>Tap "Next"</li>
+  <li>If prompted with the Security Administration screen, select "Ok" to proceed.</li>
+  <li>Within the "Account Settings" screen, adjust the items you wish to sync.</li>
+  <li>Within the the next screen, this is alerting you that ActiveSync will modify your device security settings to meet your organization's criteria. Tap "Activate".</li>
+  <li>Success! Your Nexus device should now begin syncing with your mailbox.</li>
   <li>Resolve ticket.</li>
-  </ol>
+</ol>
 
 
 <h3 id="android-htc">HTC</h3>
   <p>back to <a href="#">top</a> </p>
+  <p>This is a setup guide that will assist you in setting up your Hosted Exchange Mailbox on HTC mobile and tablet devices using ActiveSync.</p>
 
-  <ol>
+<ol>
   <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Locate the "Settings" icon 1. within your Apps Drawer.</li>
+  <li>Within Settings, scroll down and select "Accounts and Sync".</li>
+  <li>In the upper right, select "Add".</li>
+  <li>Select "Exchange ActiveSync".</li>
+  <li>Enter the following information:</li>
+    <ul>
+      <li>"Email Address": ruthless@securityaware.case.edu</li>
+      <li>"Password": Your email address password</li>
+    </ul>
+  <li>Tap "Next".</li>
+  <li>Enter the following information on the next screen:</li>
+    <ul>
+      <li>"Email address": ruthless@securityaware.case.edu</li>
+      <li>"Server": mex08.emailsrvr.com</li>
+      <li>"Domain": Leave this blank</li>
+      <li>"Username": ruthless@securityaware.case.edu</li>
+      <li>"Password": Your email address password</li>
+      <li>"This server requires an encrypted SSL connection": Checked</li>
+    </ul>
+  <li>Tap "Next".</li>
+  <li>If prompted with the Security Administration screen, select "Ok" to proceed.</li>
+  <li>Within the "Account Settings" screen, adjust the items you wish to sync.</li>
+  <li>Tap "Next".</li>
+  <li>Success! Your HTC device should now begin syncing with your mailbox.</li>
   <li>Resolve ticket.</li>
-  </ol>
+</ol>
 
 
 <h3 id="android-motorola">Motorola</h3>
   <p>back to <a href="#">top</a> </p>
+  <p>This is a setup guide that will assist you in setting up your Hosted Exchange Mailbox on Motorola mobile and tablet devices using ActiveSync.</p>
 
-  <ol>
+<ol>
   <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Locate the "Settings" icon within your Apps Drawer.</li>
+  <li>Within Settings, scroll down and select "Add Account".</li>
+  <li>Select "Corporate".</li>
+  <li>Enter the following information:</li>
+    <ul>
+      <li>"Email Address": ruthless@securityaware.case.edu</li>
+      <li>"Password": Your email address password</li>
+    </ul>
+  <li>Tap "Next".</li>
+  <li>Enter the following information on the next screen:</li>
+    <ul>
+      <li>"Domain\Username": ruthless@securityaware.case.edu</li>
+      <li>"Password": Your email address password</li>
+      <li>"Server": mex08.emailsrvr.com</li>
+    </ul>
+  <li>Tap "Next".</li>
+  <li>If prompted with the Security Administration screen, select "Ok" to proceed.</li>
+  <li>Within the "Account Settings" screen, adjust the items you wish to sync.</li>
+  <li>Within the "Account setup" screen, feel free to enter your Email Address or your Name.</li>
+  <li>Success! Your Motorola device should now begin syncing with your mailbox.</li>
   <li>Resolve ticket.</li>
-  </ol>
-
+</ol>
 
 <h3 id="android-samsung">Samsung</h3>
   <p>back to <a href="#">top</a> </p>
+  <p>This is a setup guide that will assist you in setting up your Hosted Exchange Mailbox on Samsung mobile and tablet devices using ActiveSync.</p>
 
-  <ol>
+<ol>
   <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Locate the "Settings" icon 1. within your Apps Drawer.</li>
+  <li>Within Settings, scroll down and select "Add Account".</li>
+  <li>Select "Email".</li>
+  <li>Enter the following information:</li>
+    <ul>  
+      <li>"Email Address": ruthless@securityaware.case.edu</li>
+      <li>"Password": Your email address password</li>
+    </ul>
+  <li>Tap "Next".</li>
+  <li>Tap "Microsoft Exchange ActiveSync".</li>
+  <li>Enter the following information on the next screen:</li>
+    <ul>
+      <li>"User name": ruthless@securityaware.case.edu</li>
+      <li>"Password": Your email address password</li>
+      <li>"Server": mex08.emailsrvr.com</li>
+      <li>"Use secure connection (SSL)": Checked</li>
+    </ul>
+  <li>Tap "Next"
+  <li>If prompted with the Security Administration screen, select "Ok" to proceed.</li>
+  <li>Within the "Account Settings" screen, adjust the items you wish to sync.</li>
+  <li>Within the "Account setup" screen, feel free to enter your Email Address or your Name.</li>
+  <li>Success! Your Samsung device should now begin syncing with your mailbox.</li>
   <li>Resolve ticket.</li>
-  </ol>
+</ol>
 
 
 <h3 id="android-lg">LG</h3>
   <p>back to <a href="#">top</a> </p>
+  <p>Configure your client to use traditional POP/IMAP + SMTP.</p>
 
-  <ol>
+<ol>
   <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Use the following settings:<br>
+  <p>&nbsp;</p>
+
+  <table class="table table-striped table-condensed">
+  <thead>
+    <tr>
+      <th>Field</th>
+      <th>Value</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Email Address</td>       <td>ruthless@securityaware.case.edu</td>
+      <td>Username</td>            <td>ruthless@securityaware.case.edu</td>
+      <td>Domain</td>              <td>Leave Blank</td>
+      <td>Mailbox Server</td>      <td>outlook</td>
+      <td>Exchange Server</td>     <td>mex08.emailsrvr.com</td>
+      <td>Server Address</td>      <td>https://mex08.emailsrvr.com</td>
+      <td>Outlook Web Access</td>  <td>https://mex08.emailsrvr.com</td>
+    </tr>
+  </tbody>
+  </table>
+  
+  <table class="table table-striped table-condensed">
+  <thead>
+    <tr>
+      <th>Field</th>
+      <th>Value</th>
+      <th>Ports</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>POP Server (SSL)</td>       <td>secure.emailsrvr.com</td>   <td>993</td>
+      <td>IMAP Server (SSL)</td>      <td>secure.emailsrvr.com</td>   <td>993</td>
+      <td>SMTP Server (SSL)</td>      <td>secure.emailsrvr.com</td>   <td>465</td>
+      <td>POP Server (Non-SSL)</td>   <td>pop.emailsrvr.com</td>      <td>110</td>
+      <td>IMAP Server (Non-SSL)</td>  <td>imap.emailsrvr.com</td>     <td>143</td>
+      <td>SMTP Server (Non-SSL)</td>  <td>smtp.emailsrvr.com</td>     <td>25, 587, 8025, 2525</td>
+    </tr>
+  </tbody>
+  </table>
+  </li>
   <li>Resolve ticket.</li>
-  </ol>
+</ol>
 
 
 <h3 id="apple-ios">iOS</h3>
   <p>back to <a href="#">top</a> </p>
-
-  <ol>
+  <p>This article will assist you in setting up your Apple iOS device with your Hosted Exchange mailbox.</p>
+  
+<ol>
   <li>Gather resolution information and enter it into the ticket.</li>
+  <li>On the home screen, tap the "Settings" icon.</li>
+  <li>Within Settings, tap "Mail, Contacts, Calendars".</li>
+  <li>Tap "Add Account".</li>
+  <li>Tap "Exchange".</li>
+  <li>Enter the following details:</li>
+    <ul>
+      <li>"Email Address": ruthless@securityaware.case.edu</li>
+      <li>"Password": Your mailbox password</li>
+      <li>"Description": Exchange Hosted Mailbox</li>
+    </ul>
+  <li>Tap "Next".</li>
+  <li>You may be prompted for additional information. If so, enter the following details:</li>
+    <ul>
+      <li>"Server": mex08.emailsrvr.com</li>
+      <li>"Domain": Leave Blank</li>
+      <li>"Username": ruthless@securityaware.case.edu</li>
+    </ul>
+  <li>Select the services that you wish to synchronize from the Exchange Server. Then tap "Save".</li>
+  <li>Once saved, head over to the Mail app to access your email. Note: If you have a large mailbox, it may take
+several minutes before email appears. Please wait at least 15 minutes before troubleshooting.</li>
   <li>Resolve ticket.</li>
-  </ol>
+</ol>
 
 
 <h3 id="apple-macmail">Mac Mail</h3>
   <p>back to <a href="#">top</a> </p>
+  <p>This article will assist you with setting up Apple Mail with your Hosted Exchange mailbox.</p>
 
-  <ol>
+<ol>
   <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Launch System Preferences. You can easily get to System Preferences by pressing "Command (?) +
+Space Bar". Then type "System Preferences" in the Spotlight search. Press enter to launch the System
+Preferences application.
+  <li>Within System Preferences, click "Internet Accounts".</li>
+  <li>Then select "Exchange".</li>
+  <li>The pop up dialog will require the following:</li>
+    <ul>
+      <li>"Name": Enter your first and last name.</li>
+      <li>"Email Address": ruthless@securityaware.case.edu</li>
+      <li>"Password": Enter your mailbox password.</li>
+    </ul>
+  <li>Select "Continue".</li>
+  <li>If "Server Address" appears, enter "mex08.emailsrvr.com" (without quotes). Then click the "Continue" button once more.</li>
+  <li>Select "Continue" once more. Then select the apps you would like to sync with Exchange.</li>
+  <li>Select "Done".</li>
+  <li>Finally, launch Mail. Your email should begin downloading shortly.</li>
   <li>Resolve ticket.</li>
-  </ol>
+</ol>
 
 
 <h3 id="windows-mobile">Windows Mobile</h3>
   <p>back to <a href="#">top</a> </p>
+  <p>This article will assist you in setting up your Windows Mobile device with your Hosted Exchange mailbox</p>
 
-  <ol>
+<ol>
   <li>Gather resolution information and enter it into the ticket.</li>
+  <li>From the home screen, tap the "Windows" icon.</li>
+  <li>Within the application menu, scroll down and tap "Settings".</li>
+  <li>Tap "email+accounts".</li>
+  <li>Tap "add an account".</li>
+  <li>Tap "advanced setup".</li>
+  <li>Enter the following details:</li>
+    <ul>
+      <li>"Email Address": ruthless@securityaware.case.edu</li>
+      <li>"Password": Your mailbox password</li>
+    </ul>  
+  <li>Tap "sign in".</li>
+  <li>Tap "Exchange ActiveSync".</li>
+  <li>Enter the following details:</li>
+    <ul>  
+      <li>"User name": ruthless@securityaware.case.edu</li>
+      <li>"Domain": Leave Blank</li>
+      <li>"Server": mex08.emailsrvr.com</li>
+    </ul>
+  <li>Tap "sign in".</li>
+  <li>Tap "sign in" once more.</li>
+  <li>That's all! You should see a new icon within your Settings menu with the name of your email account.</li>
   <li>Resolve ticket.</li>
-  </ol>
+</ol>
 
 
-<h3 id="outlook">Outlook (2007,2010,2013)</h3>
+<h3 id="outlook">Outlook (2007, 2010, 2013)</h3>
   <p>back to <a href="#">top</a> </p>
+  <p>This article will assist you with setting up Outlook 2007 with your Hosted Exchange mailbox.</p>
 
   <ol>
   <li>Gather resolution information and enter it into the ticket.</li>
+  <li>Windows 7: Start Menu -> Control Panel. Double-click on "Mail".</li>
+  <li>Windows 8: Open the "Charms" by moving your mouse to the top right of your screen. Select Search. (Search for "Mail")</li>
+  <li>When the Mail Control Panel opens, select "Show Profiles".</li>
+  <li>Select "Add" to add a new profile. Enter any name you wish and select "OK".</li>
+  <li>Select "Manually configure server settings or additional server types". Click "Next".</li>
+  <li>On the "Choose Service" page, select "Microsoft Exchange or compatible service". Click "Next".</li>
+  <li>On the "Server Settings" page, 6. enter the following:</li>
+    <ul>
+      <li>"Server": outlook</li>
+      <li>"Use Cached Exchange Mode": Checked</li>
+      <li>"User Name": ruthless@securityaware.case.edu</li>
+    </ul>  
+  <li>Click the "More Settings..." button.</li>
+  <li>Go to the "Connection" tab.</li>
+  <li>Under "Outlook Anywhere", check "Connect to Microsoft Exchange using HTTP".</li>
+  <li>Click the "Exchange Proxy Settings..." button.</li>
+  <li>Within the box titled "Use this URL to connect to my proxy server for Exchange", enter the following:</li>
+    <ul>
+      <li>URL: "mex08.emailsrvr.com" (Without quotes)</li>
+      <li>Ensure both checkboxes are checked:</li>
+        <ul>
+          <li>"Connect using SSL only"</li>
+          <li>"Only connect to proxy servers that have this principal name in their certificate"</li>
+        </ul>
+    </ul>
+  <li>Within the box titled "Only connect to proxy servers that have this principal name in their certificate", enter the following:</li>
+    <ul>
+      <li>"msstd:mex08.emailsrvr.com" (Without quotes)</li>
+      <li>Ensure both checkboxes are checked:</li>
+        <ul>
+          <li>"On fast networks, connect using HTTP first, then connect using TCP/IP"</li>
+          <li>"On slow networks, connect using HTTP first, then connect using TCP/IP"</li>
+        </ul>
+    </ul>
+  <li>Within the box titled "Use this authentication when connecting to my proxy server for Exchange", select "Basic Authentication".</li>
+  <li>Click "OK" in the "Microsoft Exchange Proxy Settings" window.</li>
+  <li>Click "OK" in the "Microsoft Exchange" window.</li>
+  <li>Within the window titled "Add New Account", click "Check Name". If you're prompted to enter your Username and Password, do so now.</li>
+  <li> Once the "Server" and "User Name" fields are underlined, click "Next".</li>
+  <li>Click "Finish" to complete the configuration.</li>
+  <li>Finally, launch Outlook. Your email should begin downloading shortly.</li>
   <li>Resolve ticket.</li>
-  </ol>
+</ol>
 
 
 <h3 id="other-setup">Other Clients</h3>
   <p>back to <a href="#">top</a> </p>
+  <p>This article will assist you with setting up your email client with your Hosted Exchange mailbox.</p>
 
   <ol>
   <li>Gather resolution information and enter it into the ticket.</li>
+  <li>If your email client supports Exchange Web Services (EWS), use the following settings:<br>
+  <p>&nbsp;</p>
+
+  <table class="table table-striped table-condensed">
+  <thead>
+    <tr>
+      <th>Field</th>
+      <th>Value</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Email Address</td>       <td>ruthless@securityaware.case.edu</td>
+      <td>Username</td>            <td>ruthless@securityaware.case.edu</td>
+      <td>Domain</td>              <td>Leave Blank</td>
+      <td>Mailbox Server</td>      <td>outlook</td>
+      <td>Exchange Server</td>     <td>mex08.emailsrvr.com</td>
+      <td>Server Address</td>      <td>https://mex08.emailsrvr.com</td>
+      <td>Outlook Web Access</td>  <td>https://mex08.emailsrvr.com</td>
+    </tr>
+  </tbody>
+  </table>
+  </li>
+  <li>If your email client does not support Exchange Web Services (EWS), you will need to configure your client to use traditional POP/IMAP + SMTP. Use the following settings:<br>
+  <p>&nbsp;</p>
+
+  <table class="table table-striped table-condensed">
+  <thead>
+    <tr>
+      <th>Field</th>
+      <th>Value</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Email Address</td>       <td>ruthless@securityaware.case.edu</td>
+      <td>Username</td>            <td>ruthless@securityaware.case.edu</td>
+      <td>Domain</td>              <td>Leave Blank</td>
+      <td>Mailbox Server</td>      <td>outlook</td>
+      <td>Exchange Server</td>     <td>mex08.emailsrvr.com</td>
+      <td>Server Address</td>      <td>https://mex08.emailsrvr.com</td>
+      <td>Outlook Web Access</td>  <td>https://mex08.emailsrvr.com</td>
+    </tr>
+  </tbody>
+  </table>
+  
+  <table class="table table-striped table-condensed">
+  <thead>
+    <tr>
+      <th>Field</th>
+      <th>Value</th>
+      <th>Ports</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>POP Server (SSL)</td>       <td>secure.emailsrvr.com</td>   <td>993</td>
+      <td>IMAP Server (SSL)</td>      <td>secure.emailsrvr.com</td>   <td>993</td>
+      <td>SMTP Server (SSL)</td>      <td>secure.emailsrvr.com</td>   <td>465</td>
+      <td>POP Server (Non-SSL)</td>   <td>pop.emailsrvr.com</td>      <td>110</td>
+      <td>IMAP Server (Non-SSL)</td>  <td>imap.emailsrvr.com</td>     <td>143</td>
+      <td>SMTP Server (Non-SSL)</td>  <td>smtp.emailsrvr.com</td>     <td>25, 587, 8025, 2525</td>
+    </tr>
+  </tbody>
+  </table>
+  </li>
   <li>Resolve ticket.</li>
-  </ol>
+</ol>
 
   
 <h2>Move + Change</h2>
