prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -299,15 +299,13 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>Email Address</td>       <td>ruthless@securityaware.case.edu</td>
-      <td>Username</td>            <td>ruthless@securityaware.case.edu</td>
-      <td>Domain</td>              <td>Leave Blank</td>
-      <td>Mailbox Server</td>      <td>outlook</td>
-      <td>Exchange Server</td>     <td>mex08.emailsrvr.com</td>
-      <td>Server Address</td>      <td>https://mex08.emailsrvr.com</td>
-      <td>Outlook Web Access</td>  <td>https://mex08.emailsrvr.com</td>
-    </tr>
+    <tr><td>Email Address</td>       <td>ruthless@securityaware.case.edu</td></tr>
+    <tr><td>Username</td>            <td>ruthless@securityaware.case.edu</td></tr>
+    <tr><td>Domain</td>              <td>Leave Blank</td></tr>
+    <tr><td>Mailbox Server</td>      <td>outlook</td></tr>
+    <tr><td>Exchange Server</td>     <td>mex08.emailsrvr.com</td></tr>
+    <tr><td>Server Address</td>      <td>https://mex08.emailsrvr.com</td></tr>
+    <tr><td>Outlook Web Access</td>  <td>https://mex08.emailsrvr.com</td></tr>
   </tbody>
   </table>
   
@@ -320,14 +318,12 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>POP Server (SSL)</td>       <td>secure.emailsrvr.com</td>   <td>993</td>
-      <td>IMAP Server (SSL)</td>      <td>secure.emailsrvr.com</td>   <td>993</td>
-      <td>SMTP Server (SSL)</td>      <td>secure.emailsrvr.com</td>   <td>465</td>
-      <td>POP Server (Non-SSL)</td>   <td>pop.emailsrvr.com</td>      <td>110</td>
-      <td>IMAP Server (Non-SSL)</td>  <td>imap.emailsrvr.com</td>     <td>143</td>
-      <td>SMTP Server (Non-SSL)</td>  <td>smtp.emailsrvr.com</td>     <td>25, 587, 8025, 2525</td>
-    </tr>
+    <tr><td>POP Server (SSL)</td>       <td>secure.emailsrvr.com</td>   <td>993</td></tr>
+    <tr><td>IMAP Server (SSL)</td>      <td>secure.emailsrvr.com</td>   <td>993</td></tr>
+    <tr><td>SMTP Server (SSL)</td>      <td>secure.emailsrvr.com</td>   <td>465</td></tr>
+    <tr><td>POP Server (Non-SSL)</td>   <td>pop.emailsrvr.com</td>      <td>110</td></tr>
+    <tr><td>IMAP Server (Non-SSL)</td>  <td>imap.emailsrvr.com</td>     <td>143</td></tr>
+    <tr><td>SMTP Server (Non-SSL)</td>  <td>smtp.emailsrvr.com</td>     <td>25, 587, 8025, 2525</td></tr>
   </tbody>
   </table>
   </li>
@@ -513,15 +509,13 @@ Preferences application.
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>Email Address</td>       <td>ruthless@securityaware.case.edu</td>
-      <td>Username</td>            <td>ruthless@securityaware.case.edu</td>
-      <td>Domain</td>              <td>Leave Blank</td>
-      <td>Mailbox Server</td>      <td>outlook</td>
-      <td>Exchange Server</td>     <td>mex08.emailsrvr.com</td>
-      <td>Server Address</td>      <td>https://mex08.emailsrvr.com</td>
-      <td>Outlook Web Access</td>  <td>https://mex08.emailsrvr.com</td>
-    </tr>
+    <tr><td>Email Address</td>       <td>ruthless@securityaware.case.edu</td></tr>
+    <tr><td>Username</td>            <td>ruthless@securityaware.case.edu</td></tr>
+    <tr><td>Domain</td>              <td>Leave Blank</td></tr>
+    <tr><td>Mailbox Server</td>      <td>outlook</td></tr>
+    <tr><td>Exchange Server</td>     <td>mex08.emailsrvr.com</td></tr>
+    <tr><td>Server Address</td>      <td>https://mex08.emailsrvr.com</td></tr>
+    <tr><td>Outlook Web Access</td>  <td>https://mex08.emailsrvr.com</td></tr>
   </tbody>
   </table>
   
@@ -534,14 +528,12 @@ Preferences application.
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>POP Server (SSL)</td>       <td>secure.emailsrvr.com</td>   <td>993</td>
-      <td>IMAP Server (SSL)</td>      <td>secure.emailsrvr.com</td>   <td>993</td>
-      <td>SMTP Server (SSL)</td>      <td>secure.emailsrvr.com</td>   <td>465</td>
-      <td>POP Server (Non-SSL)</td>   <td>pop.emailsrvr.com</td>      <td>110</td>
-      <td>IMAP Server (Non-SSL)</td>  <td>imap.emailsrvr.com</td>     <td>143</td>
-      <td>SMTP Server (Non-SSL)</td>  <td>smtp.emailsrvr.com</td>     <td>25, 587, 8025, 2525</td>
-    </tr>
+    <tr><td>POP Server (SSL)</td>       <td>secure.emailsrvr.com</td>   <td>993</td></tr>
+    <tr><td>IMAP Server (SSL)</td>      <td>secure.emailsrvr.com</td>   <td>993</td></tr>
+    <tr><td>SMTP Server (SSL)</td>      <td>secure.emailsrvr.com</td>   <td>465</td></tr>
+    <tr><td>POP Server (Non-SSL)</td>   <td>pop.emailsrvr.com</td>      <td>110</td></tr>
+    <tr><td>IMAP Server (Non-SSL)</td>  <td>imap.emailsrvr.com</td>     <td>143</td></tr>
+    <tr><td>SMTP Server (Non-SSL)</td>  <td>smtp.emailsrvr.com</td>     <td>25, 587, 8025, 2525</td></tr>
   </tbody>
   </table>
   </li>
