prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -486,15 +486,13 @@ Preferences application.
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>Email Address</td>       <td>ruthless@securityaware.case.edu</td>
-      <td>Username</td>            <td>ruthless@securityaware.case.edu</td>
-      <td>Domain</td>              <td>Leave Blank</td>
-      <td>Mailbox Server</td>      <td>outlook</td>
-      <td>Exchange Server</td>     <td>mex08.emailsrvr.com</td>
-      <td>Server Address</td>      <td>https://mex08.emailsrvr.com</td>
-      <td>Outlook Web Access</td>  <td>https://mex08.emailsrvr.com</td>
-    </tr>
+    <tr><td>Email Address</td>       <td>ruthless@securityaware.case.edu</td></tr>
+    <tr><td>Username</td>            <td>ruthless@securityaware.case.edu</td></tr>
+    <tr><td>Domain</td>              <td>Leave Blank</td></tr>
+    <tr><td>Mailbox Server</td>      <td>outlook</td></tr>
+    <tr><td>Exchange Server</td>     <td>mex08.emailsrvr.com</td></tr>
+    <tr><td>Server Address</td>      <td>https://mex08.emailsrvr.com</td></tr>
+    <tr><td>Outlook Web Access</td>  <td>https://mex08.emailsrvr.com</td></tr>
   </tbody>
   </table>
   </li>
