prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -50,12 +50,10 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <a href="#">Topic2</a><br>
   &nbsp;</p>
 
-<h3>Move + Change</h3>
-  <p><a href="#">Topic1</a><br>
-  <a href="#">Topic2</a><br>
-  &nbsp;</p>
 
 <h3>Activate + Setup + Install</h3>
+<p>Before rendering service, verify (1) user identity (should appear on <a href="#users">authorized list</a>) and (2) user device type (see list following).
+
   <p><strong>Android (device-specific)</strong><br>
   <a href="#android-sony">Sony</a><br>
   <a href="#android-nexus">Nexus</a><br>
@@ -87,7 +85,6 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 
 <hr>
 <h2 id="tools-for-resolution">Tools for Resolution</h2>
-
 <h3 id="required-information">Required Information</h3>
 
 <ul>
@@ -97,6 +94,21 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <li>Location</li>
   <li>Problem or Request description</li>
 </ul>
+
+<h3 id="users">Additional Information</h3>
+
+<div class="well well-sm">
+<p><strong>Authorized Users</strong></p>
+
+<p>
+<strong>Barbara Snyder</strong>, barbara.snyder@case.edu<br>
+<strong>Jane Vondrak</strong>, jane.vondrak@case.edu<br>
+<strong>William (Bud) Baeslack</strong>, baeslack@case.edu<br>
+<strong>Christianne (Chris) Sheridan</strong>, christianne.sheridan@case.edu<br>
+<strong>Diane Hoard</strong>, diane.hoard@case.edu<br>
+<strong>Katie Brancato</strong>, katie.brancato@case.edu<br>
+<strong>Susan Karaba</strong>, susan.karaba@case.edu
+</p>
 
 <h3 id="resolver-groups">Resolver Groups</h3>
 
@@ -111,7 +123,10 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <h3>Who to Call</h3><span  color="white"><a href="http://punnitimages.s3-website-us-east-1.amazonaws.com/KVe.gif">HERE</a></span>
 <div class="well well-sm">
 <ol>
-  <li><strong>Jeremy Cole</strong>, Office: (216) 368-0072, Cell: (440) 477-2232, Google Voice: (440) 296-9250</li>
+  <li><strong>Jeremy Cole</strong><br>
+    Office: (216) 368-0072<br> 
+    Cell: (440) 477-2232<br>
+    Google Voice: (440) 296-9250</li>
   <li><strong>Stan Kusper</strong>, Office: (216) 368-6484, Cell: (216) 470-9962</li>
   <li><strong>Dave Uhrin</strong>, Office: (216) 368-5674, Cell:</li>
   <li><strong>Paul Kalanish</strong>, Office: (216) 368-5911, Cell: </li>
@@ -128,25 +143,25 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 
 <h3 id="android-sony">Sony</h3>
   <p>back to <a href="#">top</a> </p>
-  <p>This is a setup guide that will assist you in setting up your Hosted Exchange Mailbox on Sony Experia mobile and tablet devices using ActiveSync.</p>
+  <p>Set up a Hosted Exchange Mailbox on Sony Experia mobile and tablet devices using ActiveSync.</p>
 
 <ol>
   <li>Gather resolution information and enter it into the ticket.</li>
-  <li>Locate the "Settings" icon within your Apps Drawer.</li>
-  <li>Within Settings, scroll down to "Accounts" and select "Add account".</li>
-  <li>Select "Corporate".</li>
+  <li>Locate the <strong>Settings</strong> icon within your Apps Drawer.</li>
+  <li>Within Settings, scroll down to <strong>Accounts</strong> and select <strong>Add account</strong>.</li>
+  <li>Select <strong>Corporate</strong>.</li>
   <li>Enter the following information:</li>
       <ul>
-        <li>"Email Address": ruthless@securityaware.case.edu</li>
-        <li>"Password": Your mailbox password</li>
+        <li><strong>Email Address</strong>: first.last@case.edu</li>
+        <li><strong>Password</strong>: Your mailbox password</li>
       </ul>
-  <li>Tap "Next".</li>
+  <li>Tap <strong>Next</strong>.</li>
   <li>Enter the following information:</li>
       <ul>
-        <li>"Domain\Username": ruthless@securityaware.case.edu</li>
-        <li>"Password": Your mailbox password</li>
-        <li>"Server": mex08.emailsrvr.com</li>
-        <li>"Use secure connection (SSL)": Checked</li>
+        <li><strong>Domain\Username</strong>: first.last@case.edu</li>
+        <li><strong>Password</strong>: Your mailbox password</li>
+        <li><strong>Server</strong>: mex08.emailsrvr.com</li>
+        <li><strong>Use secure connection (SSL)</strong>: Checked</li>
       </ul>
   <li> Tap "Next".
   <li> If prompted with the Remove security administration alert, select "Ok" to proceed.</li>
@@ -167,13 +182,13 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <li>Within Settings, scroll down to "Personal" and select "Accounts".</li>
   <li>Select "Add Account".</li>
   <li>Select "Exchange".</li>
-  <li>Enter the following information: "Email Address": ruthless@securityaware.case.edu</li>
+  <li>Enter the following information: "Email Address": first.last@case.edu</li>
   <li>Tap "Next".</li>
   <li>Enter the following information: "Password": Your Mailbox Password</li>
   <li>Tap "Next".</li>
   <li>Enter the following information on the next screen:</li>
     <ul>
-      <li>"User name": ruthless@securityaware.case.edu</li>
+      <li>"User name": first.last@case.edu</li>
       <li>"Server": mex08.emailsrvr.com</li>
       <li>"Port": 443</li>
       <li>"Security Type": SSL/TLS</li>
@@ -199,16 +214,16 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <li>Select "Exchange ActiveSync".</li>
   <li>Enter the following information:</li>
     <ul>
-      <li>"Email Address": ruthless@securityaware.case.edu</li>
+      <li>"Email Address": first.last@case.edu</li>
       <li>"Password": Your email address password</li>
     </ul>
   <li>Tap "Next".</li>
   <li>Enter the following information on the next screen:</li>
     <ul>
-      <li>"Email address": ruthless@securityaware.case.edu</li>
+      <li>"Email address": first.last@case.edu</li>
       <li>"Server": mex08.emailsrvr.com</li>
       <li>"Domain": Leave this blank</li>
-      <li>"Username": ruthless@securityaware.case.edu</li>
+      <li>"Username": first.last@case.edu</li>
       <li>"Password": Your email address password</li>
       <li>"This server requires an encrypted SSL connection": Checked</li>
     </ul>
@@ -232,13 +247,13 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <li>Select "Corporate".</li>
   <li>Enter the following information:</li>
     <ul>
-      <li>"Email Address": ruthless@securityaware.case.edu</li>
+      <li>"Email Address": first.last@case.edu</li>
       <li>"Password": Your email address password</li>
     </ul>
   <li>Tap "Next".</li>
   <li>Enter the following information on the next screen:</li>
     <ul>
-      <li>"Domain\Username": ruthless@securityaware.case.edu</li>
+      <li>"Domain\Username": first.last@case.edu</li>
       <li>"Password": Your email address password</li>
       <li>"Server": mex08.emailsrvr.com</li>
     </ul>
@@ -261,14 +276,14 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <li>Select "Email".</li>
   <li>Enter the following information:</li>
     <ul>  
-      <li>"Email Address": ruthless@securityaware.case.edu</li>
+      <li>"Email Address": first.last@case.edu</li>
       <li>"Password": Your email address password</li>
     </ul>
   <li>Tap "Next".</li>
   <li>Tap "Microsoft Exchange ActiveSync".</li>
   <li>Enter the following information on the next screen:</li>
     <ul>
-      <li>"User name": ruthless@securityaware.case.edu</li>
+      <li>"User name": first.last@case.edu</li>
       <li>"Password": Your email address password</li>
       <li>"Server": mex08.emailsrvr.com</li>
       <li>"Use secure connection (SSL)": Checked</li>
@@ -299,8 +314,8 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
     </tr>
   </thead>
   <tbody>
-    <tr><td>Email Address</td>       <td>ruthless@securityaware.case.edu</td></tr>
-    <tr><td>Username</td>            <td>ruthless@securityaware.case.edu</td></tr>
+    <tr><td>Email Address</td>       <td>first.last@case.edu</td></tr>
+    <tr><td>Username</td>            <td>first.last@case.edu</td></tr>
     <tr><td>Domain</td>              <td>Leave Blank</td></tr>
     <tr><td>Mailbox Server</td>      <td>outlook</td></tr>
     <tr><td>Exchange Server</td>     <td>mex08.emailsrvr.com</td></tr>
@@ -343,7 +358,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <li>Tap "Exchange".</li>
   <li>Enter the following details:</li>
     <ul>
-      <li>"Email Address": ruthless@securityaware.case.edu</li>
+      <li>"Email Address": first.last@case.edu</li>
       <li>"Password": Your mailbox password</li>
       <li>"Description": Exchange Hosted Mailbox</li>
     </ul>
@@ -352,7 +367,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
     <ul>
       <li>"Server": mex08.emailsrvr.com</li>
       <li>"Domain": Leave Blank</li>
-      <li>"Username": ruthless@securityaware.case.edu</li>
+      <li>"Username": first.last@case.edu</li>
     </ul>
   <li>Select the services that you wish to synchronize from the Exchange Server. Then tap "Save".</li>
   <li>Once saved, head over to the Mail app to access your email. Note: If you have a large mailbox, it may take
@@ -375,7 +390,7 @@ Preferences application.
   <li>The pop up dialog will require the following:</li>
     <ul>
       <li>"Name": Enter your first and last name.</li>
-      <li>"Email Address": ruthless@securityaware.case.edu</li>
+      <li>"Email Address": first.last@case.edu</li>
       <li>"Password": Enter your mailbox password.</li>
     </ul>
   <li>Select "Continue".</li>
@@ -400,14 +415,14 @@ Preferences application.
   <li>Tap "advanced setup".</li>
   <li>Enter the following details:</li>
     <ul>
-      <li>"Email Address": ruthless@securityaware.case.edu</li>
+      <li>"Email Address": first.last@case.edu</li>
       <li>"Password": Your mailbox password</li>
     </ul>  
   <li>Tap "sign in".</li>
   <li>Tap "Exchange ActiveSync".</li>
   <li>Enter the following details:</li>
     <ul>  
-      <li>"User name": ruthless@securityaware.case.edu</li>
+      <li>"User name": first.last@case.edu</li>
       <li>"Domain": Leave Blank</li>
       <li>"Server": mex08.emailsrvr.com</li>
     </ul>
@@ -434,7 +449,7 @@ Preferences application.
     <ul>
       <li>"Server": outlook</li>
       <li>"Use Cached Exchange Mode": Checked</li>
-      <li>"User Name": ruthless@securityaware.case.edu</li>
+      <li>"User Name": first.last@case.edu</li>
     </ul>  
   <li>Click the "More Settings..." button.</li>
   <li>Go to the "Connection" tab.</li>
@@ -486,8 +501,8 @@ Preferences application.
     </tr>
   </thead>
   <tbody>
-    <tr><td>Email Address</td>       <td>ruthless@securityaware.case.edu</td></tr>
-    <tr><td>Username</td>            <td>ruthless@securityaware.case.edu</td></tr>
+    <tr><td>Email Address</td>       <td>first.last@case.edu</td></tr>
+    <tr><td>Username</td>            <td>first.last@case.edu</td></tr>
     <tr><td>Domain</td>              <td>Leave Blank</td></tr>
     <tr><td>Mailbox Server</td>      <td>outlook</td></tr>
     <tr><td>Exchange Server</td>     <td>mex08.emailsrvr.com</td></tr>
@@ -507,8 +522,8 @@ Preferences application.
     </tr>
   </thead>
   <tbody>
-    <tr><td>Email Address</td>       <td>ruthless@securityaware.case.edu</td></tr>
-    <tr><td>Username</td>            <td>ruthless@securityaware.case.edu</td></tr>
+    <tr><td>Email Address</td>       <td>first.last@case.edu</td></tr>
+    <tr><td>Username</td>            <td>first.last@case.edu</td></tr>
     <tr><td>Domain</td>              <td>Leave Blank</td></tr>
     <tr><td>Mailbox Server</td>      <td>outlook</td></tr>
     <tr><td>Exchange Server</td>     <td>mex08.emailsrvr.com</td></tr>
