--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -109,6 +109,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <strong>Katie Brancato</strong>, katie.brancato@case.edu<br>
 <strong>Susan Karaba</strong>, susan.karaba@case.edu
 </p>
+</div>
 
 <h3 id="resolver-groups">Resolver Groups</h3>
 
