prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -98,7 +98,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <h3 id="users">Additional Information</h3>
 
 <div class="well well-sm">
-<p><strong>Authorized Users</strong></p>
+<p class="lead">Authorized Users</p>
 
 <p>
 <strong>Barbara Snyder</strong>, barbara.snyder@case.edu<br>
@@ -109,6 +109,9 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <strong>Katie Brancato</strong>, katie.brancato@case.edu<br>
 <strong>Susan Karaba</strong>, susan.karaba@case.edu
 </p>
+
+<p class="lead">Rackspace Customer Service</p><br>
+<p>(855) 348-9065 (<mark>Important</mark> Analysts, DO NOT CALL)</p>
 </div>
 
 <h3 id="resolver-groups">Resolver Groups</h3>
