prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -98,8 +98,10 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <h3 id="users">Additional Information</h3>
 
 <div class="well well-sm">
-<p class="lead">Authorized Users</p>
+<p class="lead">Rackspace Customer Service</p>
+<p>(855) 348-9065</p>
 
+<p class="lead">Authorized Users</p>
 <p>
 <strong>Barbara Snyder</strong>, barbara.snyder@case.edu<br>
 <strong>Jane Vondrak</strong>, jane.vondrak@case.edu<br>
@@ -109,9 +111,6 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <strong>Katie Brancato</strong>, katie.brancato@case.edu<br>
 <strong>Susan Karaba</strong>, susan.karaba@case.edu
 </p>
-
-<p class="lead">Rackspace Customer Service</p><br>
-<p>(855) 348-9065 (<mark>Important</mark> Analysts, DO NOT CALL)</p>
 </div>
 
 <h3 id="resolver-groups">Resolver Groups</h3>
@@ -130,10 +129,20 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <li><strong>Jeremy Cole</strong><br>
     Office: (216) 368-0072<br> 
     Cell: (440) 477-2232<br>
-    Google Voice: (440) 296-9250</li>
-  <li><strong>Stan Kusper</strong>, Office: (216) 368-6484, Cell: (216) 470-9962</li>
-  <li><strong>Dave Uhrin</strong>, Office: (216) 368-5674, Cell:</li>
-  <li><strong>Paul Kalanish</strong>, Office: (216) 368-5911, Cell: </li>
+    Google Voice: (440) 296-9250
+    <p>&nbsp;</p></li>
+  <li><strong>Stan Kusper</strong><br>
+    Office: (216) 368-6484<br>
+    Cell: (216) 470-9962
+    <p>&nbsp;</p></li>
+  <li><strong>Dave Uhrin</strong><br>
+    Office: (216) 368-5674<br> 
+    Cell:
+    <p>&nbsp;</p></li>
+  <li><strong>Paul Kalanish</strong><br> 
+    Office: (216) 368-5911<br>
+    Cell: 
+    <p>&nbsp;</p></li>
 </ol>
 </div>
 
