prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -126,23 +126,19 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <h3>Who to Call</h3><span  color="white"><a href="http://punnitimages.s3-website-us-east-1.amazonaws.com/KVe.gif">HERE</a></span>
 <div class="well well-sm">
 <ol>
-  <li><strong>Jeremy Cole</strong><br>
+  <li><p><strong>Jeremy Cole</strong><br>
     Office: (216) 368-0072<br> 
     Cell: (440) 477-2232<br>
-    Google Voice: (440) 296-9250
-    <p>&nbsp;</p></li>
-  <li><strong>Stan Kusper</strong><br>
+    Google Voice: (440) 296-9250</p></li>
+  <li><p><strong>Stan Kusper</strong><br>
     Office: (216) 368-6484<br>
-    Cell: (216) 470-9962
-    <p>&nbsp;</p></li>
-  <li><strong>Dave Uhrin</strong><br>
+    Cell: (216) 470-9962</p></li>
+  <li><p><strong>Dave Uhrin</strong><br>
     Office: (216) 368-5674<br> 
-    Cell:
-    <p>&nbsp;</p></li>
-  <li><strong>Paul Kalanish</strong><br> 
+    Cell:</p></li>
+  <li><p><strong>Paul Kalanish</strong><br> 
     Office: (216) 368-5911<br>
-    Cell: 
-    <p>&nbsp;</p></li>
+    Cell:</p></li>
 </ol>
 </div>
 
